deployment-kubernetes/cart-service/service.yaml
# ============================================
# Shopease: cart-service service
# Author: Sanket Mule
# ============================================

apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: shopease-webapp-development
  
spec:
  selector:
    app: cart-service-deployment
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 8082
  type: ClusterIP
